--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
     <section class="card" id="contact-card">
       <div class="section-title center">Contact</div>
-      <p>Email: <a href="mailto:poorneshofficial@gmail.com">poorneshofficial@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://in.linkedin.com/in/poornesh-s-3093991b0" target="_blank">poornesh-s-3093991b0</a></p>
-      <p>GitHub: <a href="https://github.com/poornesh4559" target="_blank">poornesh4559</a></p>
+      <p>Email: <a class="contact-link" href="mailto:poorneshofficial@gmail.com">poorneshofficial@gmail.com</a></p>
+      <p>LinkedIn: <a class="contact-link" href="https://in.linkedin.com/in/poornesh-s-3093991b0" target="_blank">poornesh-s-3093991b0</a></p>
+      <p>GitHub: <a class="contact-link" href="https://github.com/poornesh4559" target="_blank">poornesh4559</a></p>
     </section>
   </div>
 
