--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 
   <div class="cards-container">
     <section class="card" id="about-card">
-      <div class="section-title center">About / Education</div>
+      <div class="section-title center">About</div>
+      <p style="font-size:1.1rem; margin-bottom:1.5rem;">Yo! I’m Poornesh, data guy, tech explorer, and your go-to for turning chaos into clean code. I dive deep into big data, build with Spark, and love crafting scalable pipelines that actually work. Off the clock, I’m all about anime binges, gaming marathons, and bike rides that clear the mind. I’ve got a knack for breaking things just so I can fix them better; call it hands-on learning :). From deploying workflows to dodging in boss fights, I stay curious, passionate, and always down to level up. Life’s an open-world game, and I’m grinding with purpose. 🎮📊🏍️</p>
+      <div id="about-carousel" style="margin-bottom:1.5rem;">
+        <!-- Carousel placeholder -->
+      </div>
+    </section>
+
+    <section class="card" id="education-card">
+      <div class="section-title center">Education</div>
       <p><b>Bachelor of Engineering</b> in Electronics and Communication<br>
       <b>Anna University - MIT</b> &mdash; Chennai, India<br>
       <b>GPA:</b> 8.9/10<br>
