--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Poornesh Saravanan | Cyberpunk Portfolio</title>
+  <title>Poornesh | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,8 @@
   <div class="cards-container">
     <section class="card" id="about-card">
       <div class="section-title center">About</div>
-      <p style="font-size:1.1rem; margin-bottom:1.5rem;">Yo! I’m Poornesh, data guy, tech explorer, and your go-to for turning chaos into clean code. I dive deep into big data, build with Spark, and love crafting scalable pipelines that actually work. Off the clock, I’m all about anime binges, gaming marathons, and bike rides that clear the mind. I’ve got a knack for breaking things just so I can fix them better; call it hands-on learning :). From deploying workflows to dodging in boss fights, I stay curious, passionate, and always down to level up. Life’s an open-world game, and I’m grinding with purpose. 🎮📊🏍️</p>
+      <p style="font-size:1.1rem; margin-bottom:1.5rem;">Yo! I'm Poornesh, data guy, tech explorer
+        (lowkey into everything), and your go-to for turning chaos into clean code. I chill with big data, build with Spark, and love crafting scalable pipelines that actually work. Off the clock, I’m all about anime binges, gaming marathons, and bike rides that clear the mind. I’ve got a knack for breaking things just so I can fix them better; call it hands-on learning :). From deploying workflows to dodging in boss fights, I stay curious, passionate, and always down to level up. Life's an open-world game, and I'm grinding with purpose. 🎮📊🏍️</p>
       <div id="about-carousel" style="margin-bottom:1.5rem;">
         <!-- Carousel placeholder -->
       </div>
@@ -25,7 +26,7 @@
     <section class="card" id="education-card">
       <div class="section-title center">Education</div>
       <p><b>Bachelor of Engineering</b> in Electronics and Communication<br>
-      <b>Anna University - MIT</b> &mdash; Chennai, India<br>
+      <b>Anna University - MIT</b> - Chennai, India<br>
       <b>GPA:</b> 8.9/10<br>
       <b>Graduated:</b> May 2023</p>
     </section>
@@ -34,32 +35,30 @@
       <div class="section-title center">Experience</div>
       <div class="timeline">
         <div class="timeline-item">
-          <b>Accenture</b> &mdash; Data Eng, Mgmt and Governance Analyst<br>
-          <i>Sep 2023 – Present, Pune</i>
-          <ul>
-            <li>Built a new batch ingestion framework using Dataflow (Python) to streamline file ingestion from GCS to BigQuery</li>
-            <li>Enhanced Spark-based ingestion framework, improving date handling, reconciliation, and reliability</li>
-            <li>Diagnosed and fixed file-related issues in shell scripts, improving automations and reducing failures</li>
-            <li>Designed and developed end-to-end data pipelines with Cloud Composer (Airflow), Dataproc (Pig, Spark), and GCS</li>
-          </ul>
-        </div>
-        <div class="timeline-item">
-          <b>ETL Management Project</b> &mdash; Media & Communication Sector (US)<br>
-          <i>2025</i>
-          <ul>
-            <li>Built ETL pipelines to journal (SCD/CDC) data from Oracle/Postgres DBs to Warehouse</li>
-            <li>Worked with Minio (S3 formatted OnPrem storage), Hive tables, and homegrown ETL tools</li>
-            <li>Managed jobs on provisioned servers through Spark clusters</li>
-            <li>Built a Log-Extraction Pipeline for Spark logs with Python</li>
-          </ul>
-        </div>
-        <div class="timeline-item">
-          <b>TCO</b> &mdash; Media & Communication Sector (US)
-          <ul>
-            <li>Worked on AWS CUR (Cost and Usage Report) data for cost analysis and reporting</li>
-            <li>Used Databricks for ETL of CUR, set up Amazon Quicksight for dashboards</li>
-            <li>Built a simplified AWS cost calculator API using AWS Lambda and API Gateway</li>
-          </ul>
+          <b>Accenture</b> - Data Eng, Mgmt and Governance Analyst<br>
+          <i>Sep 2023 – Present, Coimbatore</i>
+          <div style="margin-left:1.2em; margin-top:0.7em;">
+            <b style="color:#ff00ea;">On Prem to GCP Migration project</b> <span>- Banking sector (UK), 2024</span>
+            <ul>
+              <li>Built a new batch ingestion framework using Dataflow (Python) to streamline file ingestion from GCS to BigQuery</li>
+              <li>Made key enhancements to Spark-based ingestion framework, improving date handling, reconciliation updates, and overall reliability</li>
+              <li>Diagnosed and fixed file-related issues in shell scripts, improving automations and reducing failures</li>
+              <li>Designed and developed many end-to-end data pipelines for ingestion, curation, and consumption layers with Cloud Composer (Airflow), Dataproc (Pig, Spark), and Google Cloud Storage (GCS)</li>
+            </ul>
+            <b style="color:#ff00ea;">ETL Management project</b> <span>- Media & Communication sector (US), 2025</span>
+            <ul>
+              <li>Built ETL pipelines to journal (SCD/CDC) data from native Oracle/Postgres DBs to Warehouse (analysis, schema/table development, QA)</li>
+              <li>Worked with Minio (S3 formatted OnPrem storage solutions) and Hive tables to build a warehouse; used homegrown ETL tools for job scheduling and loading</li>
+              <li>Managed jobs that ran on provisioned servers through Spark clusters</li>
+              <li>Built a Log-Extraction Pipeline for Spark logs with Python</li>
+            </ul>
+            <b style="color:#ff00ea;">TCO</b> <span>- Media & Communication sector (US)</span>
+            <ul>
+              <li>Worked on AWS CUR (Cost and Usage Report) data to enable cost analysis and report on usage across the organization</li>
+              <li>Used Databricks for data ETL of CUR, and set up Amazon Quicksight for Dashboard</li>
+              <li>Built a simplified AWS cost calculator API using AWS Lambda and API Gateway</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
